--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -11,11 +11,24 @@ a {
   text-decoration: none;
   color: inherit;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
 :root {
   --black: #000000;
   --white: #ffffff;
   --linear-orange: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
+  --linear-orange-2: linear-gradient(#f9804b 0%, #fe9013 100%);
   --yellow: #ffee2e;
+  --orange: #fe9013;
+
+  --gray: #333b41;
 }
 body {
   font-family: 'Roboto', sans-serif;
@@ -34,8 +47,8 @@ h1 {
   line-height: 23px;
   font-weight: 400;
   text-align: center;
-  margin: 0;
 }
+
 /*----- HEADER STYLES -----*/
 header {
   background: var(--black);
@@ -91,7 +104,7 @@ nav a:focus {
   text-align: center;
 
   position: absolute;
-  top: 86px;
+  top: 166px; /* extra 80px for header */
   right: 220px;
   z-index: 3;
 }
@@ -131,4 +144,163 @@ nav a:focus {
   padding: 16px auto;
   width: 298px;
   height: 54px;
+}
+.hero-btn {
+  margin-top: 60px;
+}
+/*----- BACKSTAGE STYLES -----*/
+.flex-two-col {
+  display: flex;
+  justify-content: start;
+  gap: 87px;
+  margin-left: 220px;
+}
+.backstage article {
+  width: 465px;
+  color: var(--gray);
+}
+.backstage {
+  position: relative;
+  margin-left: 220px;
+  padding: 140px 0 180px;
+}
+.backstage .right-box img {
+  position: absolute;
+  top: 12px;
+  right: 0;
+}
+.backstage h2 {
+  font-size: 48px;
+  line-height: 58px;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+.backstage h3 {
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 400;
+
+  margin: 54px 0 34px;
+}
+.backstage p {
+  line-height: 21px;
+}
+
+/*----- PICK-AND-FEED STYLES -----*/
+.pick-and-feed {
+  background: linear-gradient(
+      315.75deg,
+      rgba(254, 210, 144, 0.7) 30.06%,
+      #febdab 100.95%,
+      rgba(254, 210, 144, 0.7) 106.36%
+    ),
+    linear-gradient(
+      315.75deg,
+      rgba(254, 189, 171, 0.74) 30.06%,
+      rgba(243, 169, 248, 0.66) 50.74%,
+      #e0d8f0 80.49%,
+      #eaf7fe 127.9%,
+      #eaf7fe 149.54%
+    ),
+    linear-gradient(
+      315.75deg,
+      rgba(254, 189, 171, 0.74) 30.06%,
+      rgba(243, 169, 248, 0.66) 50.74%,
+      #e0d8f0 80.49%,
+      #eaf7fe 127.9%,
+      #eaf7fe 149.54%
+    );
+  opacity: 0.9;
+  padding: 69px 220px 100px 220px;
+}
+.pick-and-feed_box {
+  background: rgba(253, 253, 255, 0.52);
+  /* backdrop-filter: blur(2px); */
+  border-radius: 20px;
+  padding: 41px 57px 59px 99px;
+}
+.pick-and-feed h2 {
+  color: var(--orange);
+  text-align: center;
+
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 58px;
+
+  margin-bottom: 30px;
+}
+.pick-and-feed h3 {
+  text-align: center;
+
+  color: var(--gray);
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 47px;
+  margin-bottom: 40px;
+}
+.pick-and-feed b {
+  display: block;
+
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+
+  color: var(--gray);
+
+  margin-bottom: 40px;
+}
+.pick-and-feed strong {
+  font-weight: 500;
+  line-height: 21px;
+
+  color: var(--gray);
+
+  margin-bottom: 10px;
+}
+.pick-and-feed p {
+  line-height: 21px;
+  font-weight: 400;
+
+  margin-bottom: 60px;
+}
+.emergency {
+  text-decoration: underline;
+  text-decoration-color: var(--orange);
+  text-underline-offset: 4px;
+}
+.white-box {
+  background: var(--white);
+  border: 1px solid var(--orange);
+  /* border-image: var(--linear-orange); */
+
+  border-radius: 5px;
+  width: 168px;
+  height: 168px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.white-box ~ p {
+  padding-top: 30px;
+  color: var(--gray);
+}
+.grid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.grid > div {
+  width: 168px;
+  height: 244px;
+}
+.grid-arr {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: calc((168px - 53px) / 2);
+}
+.pick-and-feed form {
+  text-align: center;
+  margin-top: 60px;
 }
