--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -304,3 +304,23 @@ nav a:focus {
   text-align: center;
   margin-top: 60px;
 }
+
+/*----- TESTIMONIALS STYLES -----*/
+.testimonials h3 {
+  color: var(--gray);
+}
+.card {
+  width: 268px;
+  background: #f1f3f2;
+  border-radius: 20px;
+
+  padding: 15px 15px 19px 16px;
+}
+.card-header {
+  display: flex;
+  gap: 10px;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+  margin-bottom: 11px;
+}
