--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -22,9 +22,34 @@ p {
 }
 :root {
   --black: #000000;
+  --footer-black: #111115;
   --white: #ffffff;
-  --linear-orange: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
-  --linear-orange-2: linear-gradient(#f9804b 0%, #fe9013 100%);
+
+  --orange_grad: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
+  --orange_grad_1: linear-gradient(113.96deg, #fa6f32 1.49%, #fe9013 101.44%);
+  --orange_grad_2: linear-gradient(#f9804b 0%, #fe9013 100%);
+  --orange_grad_3: linear-gradient(
+      315.75deg,
+      rgba(254, 210, 144, 0.7) 30.06%,
+      #febdab 100.95%,
+      rgba(254, 210, 144, 0.7) 106.36%
+    ),
+    linear-gradient(
+      315.75deg,
+      rgba(254, 189, 171, 0.74) 30.06%,
+      rgba(243, 169, 248, 0.66) 50.74%,
+      #e0d8f0 80.49%,
+      #eaf7fe 127.9%,
+      #eaf7fe 149.54%
+    ),
+    linear-gradient(
+      315.75deg,
+      rgba(254, 189, 171, 0.74) 30.06%,
+      rgba(243, 169, 248, 0.66) 50.74%,
+      #e0d8f0 80.49%,
+      #eaf7fe 127.9%,
+      #eaf7fe 149.54%
+    );
   --purple-gradient: linear-gradient(
     226deg,
     #febdab 6.48%,
@@ -33,23 +58,46 @@ p {
     #eaf7fe 82.33%,
     #eaf7fe 99.1%
   );
+  --pink_gradient: linear-gradient(
+      315.75deg,
+      rgba(254, 189, 171, 0.74) 30.06%,
+      rgba(243, 169, 248, 0.66) 50.74%,
+      #e0d8f0 80.49%,
+      #eaf7fe 127.9%,
+      #eaf7fe 149.54%
+    ),
+    linear-gradient(
+      315.75deg,
+      rgba(254, 189, 171, 0.74) 30.06%,
+      rgba(243, 169, 248, 0.66) 50.74%,
+      #e0d8f0 80.49%,
+      #eaf7fe 127.9%,
+      #eaf7fe 149.54%
+    );
+  --rad: #d31414;
+  --orange: #fe9013; /* orange_3 */
+
   --yellow: #ffee2e;
-  --orange: #fe9013;
-  --gray: #333b41;
-  --fossil-gray: #767474;
+  --black_blue: #333b41;
+  --gray: #767474;
+  --gray_smoky: #ababab;
   --range-gray: #f5f7f6;
-  --light-gray: #bdbdbd;
-  --hover-orange-btn: #e47209;
+  --light_gray_2: #bdbdbd;
+  --light_gray: #f1f3f2;
+  --icon-bg-default: rgba(196, 196, 196, 0.5);
+  --frosted_glass_white: rgba(253, 253, 255, 0.52);
+  --hover_orange_btn: #e47209;
+  --active_green: #4b9200;
 }
 body {
   font-family: 'Roboto', sans-serif;
   line-height: 22px;
 }
-.big-container {
+.container {
   width: 1600px;
   margin: 0 auto;
 }
-.small-container {
+.wrapper {
   width: 1160px;
   margin: 0 auto;
 }
@@ -59,15 +107,15 @@ h1 {
   font-weight: 400;
   text-align: center;
 }
-.btn:hover:hover {
-  background: var(--hover-orange-btn);
+.btn:hover {
+  background: var(--hover_orange_btn);
 }
 /*----- HEADER STYLES -----*/
 header {
   background: var(--black);
   color: var(--white);
 }
-header .small-container {
+header .wrapper {
   display: flex;
   align-items: center;
   padding: 14px 0;
@@ -90,6 +138,8 @@ header .small-container {
   display: flex;
   gap: 58px;
   font-weight: 500;
+
+  color: var(--white);
 }
 .copyright {
   margin-left: auto;
@@ -105,33 +155,27 @@ nav a:focus {
 /*----- HERO STYLES -----*/
 .hero {
   background-image: url('../../assets/images/panda.png');
+  background-repeat: no-repeat;
+  background-position: center -80px;
+  background-size: cover;
+  width: 100%;
   height: 780px;
 }
-.hero_container {
-  position: relatie;
-  width: 573.3px;
-  margin-right: auto;
+.hero .wrapper {
+  display: flex;
+  justify-content: end;
 }
 .hero_content {
   width: 500.3px;
   text-align: center;
-
   position: absolute;
-  top: 166px; /* extra 80px for header */
-  right: 220px;
-  z-index: 3;
+  margin-top: 86px;
 }
 .circle {
-  position: absolute;
-  left: calc(50% - 465px / 2 + 239.5px);
-  top: 92px;
-
   width: 465px;
   height: 465px;
-
-  background: var(--linear-orange);
+  background: var(--orange_grad);
   border-radius: 50%;
-  z-index: 2;
 }
 .hero p {
   text-transform: uppercase;
@@ -148,7 +192,7 @@ nav a:focus {
   border: none;
   cursor: pointer;
   color: var(--white);
-  background: var(--linear-orange);
+  background: var(--orange_grad);
   border-radius: 25px;
 
   text-transform: uppercase;
@@ -162,21 +206,38 @@ nav a:focus {
   margin-top: 60px;
 }
 /*----- BACKSTAGE STYLES -----*/
+.backstage {
+  position: relative;
+}
 .flex-two-col {
   display: flex;
   justify-content: start;
   gap: 87px;
   margin-left: 220px;
 }
-.backstage article {
-  width: 465px;
-  color: var(--gray);
-}
-.backstage {
+.backstage .container {
   position: relative;
-  margin-left: 220px;
+}
+.backstage .wrapper {
   padding: 140px 0 180px;
 }
+.backstage .plant {
+  background: url('../../assets/images/backstage-plant.png');
+  height: 605px;
+  width: 293px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  background-repeat: no-repeat;
+  margin-top: 12px;
+  position: absolute;
+  top: 12px;
+  right: -89px;
+}
+
+.backstage article {
+  width: 465px;
+  color: var(--black_blue);
+}
+
 .backstage .right-box img {
   position: absolute;
   top: 12px;
@@ -198,31 +259,27 @@ nav a:focus {
 .backstage p {
   line-height: 21px;
 }
-
+/*----- PETS STYLES -----*/
+.pets-container {
+  background: url('../../assets/images/palm_foto.png') left 0 bottom no-repeat,
+    url('../../assets/images/strelitzia.png') right 0 bottom no-repeat;
+}
+.pets-arrows__btn {
+  border: none;
+  background: var(--orange_grad);
+  height: 62px;
+  width: 62px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pets-arrows__btn--right {
+  transform: rotate(0.5turn);
+}
 /*----- PICK-AND-FEED STYLES -----*/
 .pick-and-feed {
-  background-image: linear-gradient(
-      315.75deg,
-      rgba(254, 210, 144, 0.7) 30.06%,
-      #febdab 100.95%,
-      rgba(254, 210, 144, 0.7) 106.36%
-    ),
-    linear-gradient(
-      315.75deg,
-      rgba(254, 189, 171, 0.74) 30.06%,
-      rgba(243, 169, 248, 0.66) 50.74%,
-      #e0d8f0 80.49%,
-      #eaf7fe 127.9%,
-      #eaf7fe 149.54%
-    ),
-    linear-gradient(
-      315.75deg,
-      rgba(254, 189, 171, 0.74) 30.06%,
-      rgba(243, 169, 248, 0.66) 50.74%,
-      #e0d8f0 80.49%,
-      #eaf7fe 127.9%,
-      #eaf7fe 149.54%
-    );
+  background-image: var(--orange_grad_3);
   opacity: 0.9;
   padding: 69px 220px 100px 220px;
 }
@@ -245,7 +302,7 @@ nav a:focus {
 .pick-and-feed h3 {
   text-align: center;
 
-  color: var(--gray);
+  color: var(--black_blue);
   font-weight: 400;
   font-size: 36px;
   line-height: 47px;
@@ -258,7 +315,7 @@ nav a:focus {
   font-size: 24px;
   line-height: 29px;
 
-  color: var(--gray);
+  color: var(--black_blue);
 
   margin-bottom: 40px;
 }
@@ -266,7 +323,7 @@ nav a:focus {
   font-weight: 500;
   line-height: 21px;
 
-  color: var(--gray);
+  color: var(--black_blue);
 
   margin-bottom: 10px;
 }
@@ -284,7 +341,7 @@ nav a:focus {
 .white-box {
   background: var(--white);
   border: 1px solid var(--orange);
-  /* border-image: var(--linear-orange); */
+  /* border-image: var(--orange_grad); */
 
   border-radius: 5px;
   width: 168px;
@@ -296,7 +353,7 @@ nav a:focus {
 }
 .white-box ~ p {
   padding-top: 30px;
-  color: var(--gray);
+  color: var(--black_blue);
 }
 .grid {
   display: flex;
@@ -319,15 +376,18 @@ nav a:focus {
 }
 
 /*----- TESTIMONIALS STYLES -----*/
-.testimonials {
+.testimonials .container {
   position: relative;
 }
-.testimonials .small-container {
+.testimonials .wrapper {
   margin: 140px 220px 180px 220px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .testimonials h3 {
-  color: var(--gray);
-  text-align: center;
+  color: var(--black_blue);
+  /* text-align: center; */
 
   font-weight: 400;
   font-size: 36px;
@@ -341,8 +401,9 @@ nav a:focus {
   gap: 30px;
 }
 .card-box {
-  background: var(--purple-gradient);
+  background: var(--pink_gradient);
   border-radius: 20px;
+  padding: 2px;
   padding: 2px;
 }
 .card {
@@ -371,7 +432,7 @@ nav a:focus {
   font-size: 15px;
   line-height: 18px;
 
-  color: var(--light-gray);
+  color: var(--light_gray_2);
   margin-top: 1px;
 }
 .card-p {
@@ -379,31 +440,160 @@ nav a:focus {
   font-size: 15px;
   line-height: 18px;
 
-  color: var(--fossil-gray);
+  color: var(--gray);
 }
 .range-box {
-  text-align: center;
-}
-input[type='range'] {
+  margin: 21px 0 31px;
+  border-radius: 5px;
   width: 599px;
   height: 8px;
-  cursor: pointer;
-
-  border: 1px solid #010101;
+  padding: 1px;
+  background: var(--pink_gradient);
+}
+input[type='range']::-webkit-slider-thumb {
+  width: 150px;
+  -webkit-appearance: none;
+  height: 8px;
   border-radius: 5px;
-
-  color: var(--orange);
+  background: var(--orange);
+}
+.range-bar {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
   background: var(--range-gray);
-
-  margin: 21px 0 31px;
+  border-radius: 5px;
+  border: none;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
-.testimonials .btn {
+
+.btn-rect {
   border-radius: 5px;
 }
-.leaf {
+.testimonials-btn {
+  margin-right: auto;
+}
+.testimonials-bg-img {
   position: absolute;
-  right: 0;
-  bottom: 0;
+  right: -162.67px;
+  bottom: -132.23px;
+}
+/*----- FOOTER STYLES -----*/
+footer {
+  background: var(--footer-black);
+  padding: 40px 0 50px 0;
+}
 
-  /* transform: matrix(-0.86, -0.5, -0.5, 0.86, 0, 0); */
+label[for='email'] {
+  color: var(--white);
+  font-size: 24px;
+  line-height: 28.8px;
+  font-weight: 400;
+  display: block;
+}
+input[type='email'] {
+  appearance: none;
+  width: 228px;
+  padding: 10px 7px 10px 10px;
+  background: transparent;
+  border: 1px solid var(--orange);
+  border-radius: 5px;
+  margin-right: 10px;
+  margin-top: 14px;
+}
+.btn-submit {
+  width: 129px;
+  height: 42px;
+
+  background: var(--light_gray);
+  color: var(--black);
+  border: 1px solid var(--black_blue);
+  border-radius: 5px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22.4px;
+}
+.btn-submit:active {
+  background: var(--light_gray);
+  color: var(--active_green);
+  border: 1px solid var(--active_green);
+}
+.social {
+  color: var(--white);
+}
+.social-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.social__link {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+.social__icon {
+  height: 26px;
+  width: 26px;
+  border-radius: 50%;
+  background: var(--icon-bg-default);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* transition: all 0.3s ease-in-out; */
+}
+.footer-copyright {
+  color: var(--white);
+}
+.footer-copyright__link {
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 21px;
+  transition: all 0.5s ease-in-out;
+}
+.footer-copyright__link:hover {
+  color: var(--hover_orange_btn);
+}
+
+.footer-copyright__link:active {
+  color: var(--active_green);
+  text-decoration: underline;
+  text-decoration-color: var(--active_green);
+  text-underline-offset: 3px;
+}
+.footer__wrapper {
+  display: grid;
+  grid-row-gap: 36px 44px;
+  grid-template-columns: repeat(5, minmax(1fr, max-content));
+  grid-template-rows: repeat(3, max-content);
+}
+.submit-form {
+  grid-column: 4/6;
+}
+.footer-btn {
+  grid-column: 1/3;
+  grid-row: 2;
+  margin-bottom: 8px;
+}
+.social {
+  grid-row: 3;
+}
+
+.footer-nav {
+  grid-column: 3/4;
+  grid-row: 3;
+
+  display: flex;
+  align-items: flex-end;
+}
+
+.footer-copyright {
+  grid-row: 3;
+  grid-column: 5/6;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
