--- a/pages/donate/style.css
+++ b/pages/donate/style.css
@@ -1,21 +1,303 @@
+@import '../../assets/styles/normalize.css';
 @import '../main/style.css';
 
+:root {
+  --gray-bg-donate: #404950;
+  --gray-another-amount: #929699;
+}
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .donate-hero {
   height: 390px;
+  background-position: center center;
+  margin-top: -3px;
 }
 .donate-pick-and-feed {
-  margin-top: 40px auto 180px;
-}
-.pick-and-feed article {
+  padding: 40px 220px 180px;
   color: var(--white);
 }
-.pick-and-feed__h3 {
+
+.donate-pick-and-feed__h3:nth-child(1) {
   color: var(--white);
   font-weight: 400;
   font-size: 36px;
   line-height: 47px;
+  margin-left: -3px;
+  margin-bottom: 10px;
 }
-h3.pick-and-feed__h3:nth-child(2) {
+.donate-pick-and-feed__h3:nth-child(2) {
+  /* line-height: 47px; */
+  line-height: 54px;
   color: var(--orange);
+  text-align: left;
   margin: 40px 0 60px;
+}
+.donate-pick-and-feed .donate-pick-and-feed__p {
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 500;
+}
+.font-regular {
+  font-weight: 400;
+}
+.donate-pick-and-feed__box {
+  padding: 40px 92px 62px;
+}
+.donate-pick-and-feed .donate-pick-and-feed__h2 {
+  margin: 0 0 16px -10px;
+  line-height: 58px;
+}
+.donate-pick-and-feed__h2 ~ p {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  color: var(--black_blue);
+}
+
+.panda-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin: 60px 228px 0 217px;
+}
+.panda-section__text {
+  color: var(--black);
+  display: flex;
+  margin-bottom: 55px;
+}
+.panda-section__left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 11px;
+  width: 159px;
+}
+.panda-section__number {
+  display: block;
+  font-weight: 500;
+  font-size: 72px;
+  line-height: 58px;
+}
+.panda-section__p {
+  color: var(--black_blue);
+}
+.panda-section__x {
+  margin: 20px 64px auto 11px;
+}
+.amount__p {
+  color: var(--black);
+  margin: 43.53px auto 17px 4px;
+}
+.amount-range {
+  background: var(--gray-bg-donate);
+  border-radius: 2px;
+  width: 976px;
+  /* padding: 6.5px 0; */
+  height: 27px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+input[type='range']::-webkit-slider-thumb {
+  background: transparent;
+}
+#input-amount {
+  appearance: none;
+  background-color: #72828e;
+  width: 915px;
+  height: 2px;
+  /* margin-left: -2px; */
+}
+.amount-grid__dots {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+
+  margin: -19px 30px 0 26px;
+}
+.amount-grid__amounts {
+  display: flex;
+  justify-content: space-between;
+
+  color: var(--black_blue);
+  font-weight: 500;
+  font-size: 26px;
+  line-height: 36px;
+
+  margin-top: 20px;
+  margin-left: -28px;
+  /* position: relative; */
+  display: inline-flex;
+}
+.amount-grid__dot-frame {
+  /* position: absolutes; */
+  width: 40px;
+  height: 40px;
+}
+.amount-grid__dot-frame:last-child {
+  margin-left: -35px;
+}
+.amount-grid__dot-frame:last-child > input {
+  margin-left: auto;
+}
+.amount-grid__dot-frame:last-child > label {
+  margin-left: 6px;
+}
+.dollar-icon {
+  background: url(../../assets/icons/dollar-black.svg) no-repeat center center;
+  width: 10px;
+  /* height: 20px; */
+}
+.amount-grid__dot {
+  display: block;
+  background: var(--yellow);
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+}
+.amount-grid__dot::before,
+.amount-grid__dot::after {
+  content: '';
+  width: 23px;
+  height: 23px;
+  border: 2px solid var(--orange);
+  border-radius: 50%;
+  background: transparent;
+  position: absolute;
+  top: -8.5px;
+  left: -8.5px;
+  z-index: 2;
+  opacity: 0;
+  transition: 350ms ease-in-out all;
+}
+.amount-grid__dot::after {
+  width: 40px;
+  height: 40px;
+  top: -17px;
+  left: -17px;
+}
+.amount-grid__dot:checked::before,
+.amount-grid__dot:checked::after {
+  opacity: 1;
+}
+.amount-grid__dot:checked ~ .amount-grid__amounts {
+  color: var(--orange);
+}
+.amount-grid__dot:checked ~ label .dollar-icon {
+  background: url(../../assets/icons/dollar-focus.svg) no-repeat center center;
+  width: 10px;
+}
+.another-amount {
+  margin-top: 26px;
+}
+.another-amount__form label[for='input-another-amount'] {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.another-amount__form {
+  margin: 50px 0 25px;
+}
+#input-another-amount {
+  background: none;
+  color: var(--gray-another-amount);
+  border: 1px solid var(--gray-another-amount);
+  border-radius: 2px;
+  padding: 16px 10px 16px 9px;
+  width: 268px;
+  height: 54px;
+  background: url(../../assets/icons/dollar-default.svg) no-repeat center right
+    10px;
+}
+#input-another-amount:focus {
+  border: 1px solid var(--active_green);
+  color: var(--active_green);
+  background: url(../../assets/icons/dollar-active.svg) no-repeat center right
+    10px;
+  transition: 150ms transform ease-in;
+}
+#input-another-amount:invalid {
+  border: 1px solid var(--rad);
+  color: var(--rad);
+  background: url(../../assets/icons/dollar-mistake.svg) no-repeat center right
+    10px;
+  transition: 150ms transform ease-in;
+}
+
+/* input type number default style remove start*/
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+/* input type number default style remove end*/
+
+input[name='amount-dot'] {
+  -webkit-appearance: none;
+  appearance: none;
+}
+.subscription__form {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  margin-left: -15px;
+}
+.subscription__form > div {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+label[for='input-monthly'],
+label[for='input-once'] {
+  color: var(--black_blue);
+}
+input[name='subscription-input'] {
+  -webkit-appearance: none;
+  appearance: none;
+
+  width: 16px;
+  height: 16px;
+  border: 1px solid var(--orange);
+  border-radius: 50%;
+  cursor: pointer;
+}
+/* checked state styles start */
+input[name='subscription-input'] {
+  display: grid;
+  place-content: center;
+}
+
+input[name='subscription-input']::before {
+  content: '';
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em var(--active_green);
+}
+
+input[name='subscription-input']:checked::before {
+  transform: scale(1);
+}
+
+/* checked state styles end */
+
+.subscription__btn {
+  margin: 31px 0 30px 10px;
+}
+.subscription__p {
+  color: var(--black_blue);
+  margin-left: 8px;
 }
